fix(be): 전체 cart 코드 리팩토링 후 test.resources.data-test.sql 테스트 전용 sql파일을 만들어 application-test.yml 파일에 sql:in:it data-locations: classpath:data-test.sql  속성을 추가하여 문제 해결