@@ -3,9 +3,10 @@ package com.back.domain.cart.dto;
 import com.back.domain.cart.entity.Cart;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record CartDto(
-        Integer cartId, // Long -> Integer 변경 제안
+        Integer cartId,
         int totalQuantity,
         int totalPrice,
         List<CartItemDto> items
@@ -13,20 +14,19 @@ public record CartDto(
     public static CartDto from(Cart cart) {
         List<CartItemDto> itemDtos = cart.getCartItems().stream()
                 .map(CartItemDto::new)
-                .toList();
+                .collect(Collectors.toList());
 
-        int totalQuantity = itemDtos.stream()
+        int calculatedTotalQuantity = itemDtos.stream()
                 .mapToInt(CartItemDto::quantity)
                 .sum();
-        // CartItemDto에 unitPrice()가 있다고 가정합니다.
-        int totalPrice = itemDtos.stream()
+        int calculatedTotalPrice = itemDtos.stream()
                 .mapToInt(item -> item.quantity() * item.unitPrice())
                 .sum();
 
         return new CartDto(
                 cart.getId(),
-                totalQuantity,
-                totalPrice,
+                calculatedTotalQuantity,
+                calculatedTotalPrice,
                 itemDtos
         );
     }
